Workaround for Application.WordBasic.DisableAutoMacros not working

Invoke() only works for this method when pVarResult is 0.
Fix as contributed on report.

Fixes: QTBUG-81543
Change-Id: I8163bccc9c69ef9c5bffb5270d2779e94e587c7e
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>